feat: Issue 2 plot-fixes, Issue 4 analysis done, Issue 3 efficiency/matching_prob bugs fixed, plots vs eta,p_T done

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-# ignore checkpoint notebooks
-.ipynb_checkpoints
+# # ignore checkpoint notebooks
+# .ipynb_checkpoints
+
+# # ignore python generated directories
+# __pycache__
